# painel_responsaveis

./: README.md  requirements.txt
.devcontainer/: devcontainer.json
src/: dados_cache.parquet  dados_cache_time.txt  gclick_frontend.py  gclick_scraper.py  main.py  responsaveis_desativados.json
src/Api_selenium/: Dockerfile  api.py  build.sh  gclick_scraper.py  pyproject.toml  render.yaml  requirements.txt
src/Streamlit_App/: dados_cache.parquet  dados_cache_time.txt  gclick_frontend.py  requirements.txt
src/utils/: helpers.py
