[tool.poetry]
name = "api-selenium"
version = "0.1.0"
description = "API para automação web com Selenium"
authors = ["roberio5641 <escritorio@avancontabilidade.com.br>"]
license = "MIT"
readme = "README.md"
keywords = ["selenium", "automation", "api"]

[tool.poetry.dependencies]
python = ">=3.9"
selenium = "^4.0.0"
gunicorn = "^23.0.0"
flask = "^2.0.0"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
waitress = ">=3.0.2,<4.0.0"
chromedriver-autoinstaller = "^0.4.0"
webdriver-manager = "^3.8.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
